Revision history for Perl extension Params::Util

0.20 Tue 26 Sep 2006
	- Advanced deprecation of _CALLABLE to "warn but work".
	- Correctly refer to _CALLABLE being deprecated, not _CODELIKE.

0.19 Thu 14 Sep 2006
	- Adding more Scalar::Util tests, this time with some diagnostics

0.18 Thu 14 Sep 2006
	- Explicitly importing refaddr in t/07_handle.t to fix
          test failure on ActivePerl 5.8.0.
	- Increased Scalar::Util dep to 1.14 because we may well
	  be hurt by tied handles-related bug.

0.17 Tue  8 Aug 2006
	- Adding experimental _HANDLE implementation

0.16 Sun  2 Jul 2006
	- We don't check for stash definedness for _INVOCANT.
	  (This is required for 5.005 compat.)

0.15 Sun  2 Jul 2006
	# This release contains only build-time changes
	- Updating to Module::Install 0.63 to add 5.004 support (sorta)
	- Dropping version dependency to 5.004 (Ricardo Signes)

0.14 Wed 10 May 2006
	- No features() used in this dist, so removing auto_install
	- Moved _CALLABLE to _CODELIKE for symmetry reasons. Sorry :(
	  Immediate doc changover. Silent alias for a month, then
	  warning alias for 3 months, then full deprecation at the end
	  of August.
	- Removed RJBS's use warnings that broke 5.005-compatibility.
	- Other minor test cleanups.

0.13 Sun May  7 2006
	# This release contains only build-time changes
	- Upgrading Module::Install to 0.62 final

0.12 Mon May  1 2006
	- Added _ARRAYLIKE and _HASHLIKE (Ricardo Signes again)
	- Added _INVOCANT (Ricardo Signes again!)
	- Expanded test suite (Does Ricardo Signes ever sleep??)

0.11 Wed Apr 12 2006
	- Update _CLASS to allow numeric parts in the tail, like Foo::10
	  (provided by Ricardo Signes)

0.10 Sat Jan 14 2006
	- Updated copyright
	- Added _STRING

0.09 Fri Dec 30 2005
	- Fixed broken link to RT in POD

0.08 Mon Dec 19 2005
	- Moved from old CVS repository to newer SVN repository
	- Added _CALLABLE (provided by Ricardo Signes)

0.07 Mon Oct 10 2005
	- Adding the :ALL tag

0.06 Wed Oct  5 2005